--- a/billing-dev.properties
+++ b/billing-dev.properties
@@ -1,7 +1,7 @@
 devMode = true
-spring.application.name = billing
+spring.application.name = config-demo
 spring.jdbc.host = localhost
 spring.jdbc.port = 3306
 spring.jdbc.user = root
-spring.jdbc.password = 123qwe
+spring.jdbc.password = 123
 loging.file = demo
