--- a/order-dev.yml
+++ b/order-dev.yml
@@ -8,5 +8,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: update
-    temp:
-      use_jdbc_metadata_defaults: false  
+      jdbc:
+        lob:
+          non_contextual_creation: true
